# python-project-structure-tutorial

./: .gitignore  README.md  genetic_algorithm.py  polynomial_regression.py  pyproject.toml
config/: genetic.toml  polynomial.toml
my_project/: __init__.py  logger.py
my_project/algorithms/: __init__.py  genetic.py
my_project/data/: feature_extraction.py  preprocess.py
my_project/metrics/: __init__.py
my_project/models/: __init__.py  linear_regression.py  polynomial_regression.py
my_project/regularization/: __init__.py
scripts/: run_genetic.py  run_polynomial.py
scripts/utils/: parse_config.py
